--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,9 +6,9 @@
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "images/icon16.png",
-      "48": "images/icon48.png",
-      "128": "images/icon128.png"
+      "16": "icons/Farm-Fresh_regex_split_16.png",
+      "48": "icons/Farm-Fresh_regex_split_48.png",
+      "128": "icons/Farm-Fresh_regex_split_128.png"
     }
   },
   "icons": {
