--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,26 +1,35 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "regex-search-extension-pkahn",
   "description": "This is a simple Hello World Chrome extension.",
   "version": "1.0",
-  "browser_action": {
+  "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "images/icon16.png",
-      "48": "images/icon48.png",
-      "128": "images/icon128.png"
+      "16": "icons/Farm-Fresh_regex_split_16.png",
+      "48": "icons/Farm-Fresh_regex_split_48.png",
+      "128": "icons/Farm-Fresh_regex_split_128.png"
     }
   },
   "icons": {
-    "16": "images/icon16.png",
-    "48": "images/icon48.png",
-    "128": "images/icon128.png"
+    "16": "icons/Farm-Fresh_regex_split_16.png",
+    "48": "icons/Farm-Fresh_regex_split_48.png",
+    "128": "icons/Farm-Fresh_regex_split_128.png"
   },
   "permissions": ["activeTab"],
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  },
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+F",
+        "mac": "Command+Shift+F"
+      },
+      "description": "Open regex search"
     }
-  ]
+  }
 }
