--- a/.github/workflows/bazel.yml
+++ b/.github/workflows/bazel.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      VERSION: 1.0.0  # Define your version here
 
     steps:
       - name: Checkout code
@@ -19,8 +21,14 @@ jobs:
       - name: Build with Bazel
         run: bazel build //:extension_pkg
 
+      - name: Rename artifact with version
+        run: mv bazel-bin/extension_pkg.zip bazel-bin/extension_pkg_${{ env.VERSION }}.zip
+
+      - name: List directory contents
+        run: ls -la /home/runner/work/chrome-ext-regex/chrome-ext-regex
+
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
         with:
           name: extension-package
-          path: bazel-bin/extension_pkg.zip
+          path: bazel-bin/extension_pkg_${{ env.VERSION }}.zip
